SSKTS-852 フロントエンドのAPI_ENDPOINTを変更

--- a/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
+++ b/src/client/src/app/components/purchase/purchase-complete/purchase-complete.component.html
@@ -96,7 +96,7 @@
                             </div>
                             <p>スマートフォンをお持ちでない方は当日チケット発券/入場も可能です。
                                 <br>発券方法は
-                                <a class="icon-new-tab-blue" href="{{ environment.API_ENDPOINT }}/method/ticketing" target="_blank">こちら</a>
+                                <a class="icon-new-tab-blue" href="{{ environment.FRONTEND_ENDPOINT }}/method/ticketing" target="_blank">こちら</a>
                             </p>
                         </dd>
                     </dl>
