--- a/src/client/src/app/components/error/error.component.html
+++ b/src/client/src/app/components/error/error.component.html
@@ -3,10 +3,12 @@
     <p class="read">お手続きの途中でエラーが発生いたしました。
         <br>お手数をおかけいたしますが、もう一度最初から操作をお願いいたします。</p>
     <div class="button-area">
-        <div class="prev-link">
-            <a class="ticket-app-hide" href="{{ environment.PORTAL_SITE_URL }}">
+        <div class="prev-link ticket-app-hide">
+            <a href="{{ environment.PORTAL_SITE_URL }}">
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
-            <a class="ticket-app-show" href="{{ environment.APP_SITE_URL }}/#/purchase">
+        </div>
+        <div class="prev-link ticket-app-show">
+            <a href="{{ environment.APP_SITE_URL }}/#/purchase">
                 <app-icon iconName="prev-black" width="15" height="15"></app-icon>戻る</a>
         </div>
     </div>
