SSKTS-880 スマホアプリスケジュール表示不具合

--- a/app/views/default/purchase/seat.ejs
+++ b/app/views/default/purchase/seat.ejs
@@ -9,7 +9,7 @@
     <% if (viewType === 'app' 
     && purchaseModel.individualScreeningEvent.coaInfo.titleCode == '18046'
     && purchaseModel.individualScreeningEvent.coaInfo.titleBranchNum == '1') { %>
-    <h1 class="page-ttl red-text" style="text-decoration: underline;">この作品は応援上映です</h1>
+    <h1 class="page-ttl red-text" style="text-decoration: underline;">※この回は応援上映です</h1>
     <% } %>
     <p class="read"><%- __('purchase.seat.read') %></p>
 
