--- a/app/views/default/error/error.ejs
+++ b/app/views/default/error/error.ejs
@@ -2,6 +2,9 @@
 <div class="error">
     <h1 class="page-ttl"><%- __('error.page_ttl') %></h1>
     <p class="read"><%- (message) ? message : __('common.error.badRequest') %></p>
+    <% if (ERROR_MESSAGE !== '') { %>
+        <%- ERROR_MESSAGE %>
+    <% } %>
     <div class="button-area clearfix">
         <% if (viewType === 'app') { %>
             <div class="prev-link"><a class="icon-prev-black"href="<%- appSiteUrl %>/#/purchase"><%- __('error.prev') %></a></div>
