SSKTS-879 スマホアプリ会員フロー追加

--- a/src/client/src/styles.scss
+++ b/src/client/src/styles.scss
@@ -3,4 +3,5 @@
 @import "assets/scss/reset";
 @import "assets/scss/common";
 @import "assets/scss/ticketApp";
+@import "assets/scss/member";
 @import "assets/scss/screen";
