--- a/src/client/src/app/components/app/app.component.html
+++ b/src/client/src/app/components/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="wrapper" [class.ticket-app]="awsCognito.isAuthenticate()">
+<div class="wrapper" [class.ticket-app]="user.isNative()" [class.member]="user.isMember()">
     <router-outlet></router-outlet>
 </div>
