SSKTS-879 スマホアプリ会員フロー追加

--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -74,8 +74,8 @@
         <div class="box radius bg-light-gray mb-large">
             <dl>
                 <dd>
-                    <input [class.validation]="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].touched" type="tel" formControlName="telephone"
-                        autocomplete="tel" placeholder="(例)08000000000">
+                    <input [class.validation]="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].touched" type="tel"
+                        formControlName="telephone" autocomplete="tel" placeholder="(例)08000000000">
                     <div *ngIf="inputForm.controls['telephone'].invalid && inputForm.controls['telephone'].touched">
                         <div *ngIf="inputForm.controls['telephone'].errors.required" class="validation-text">電話番号が未入力です</div>
                         <div *ngIf="inputForm.controls['telephone'].errors.minlength" class="validation-text">電話番号は{{ inputForm.controls['telephone'].errors.minlength.requiredLength }}文字以上で入力してください</div>
@@ -112,7 +112,8 @@
                         <dt>カード番号</dt>
                         <dd>
                             <input [class.validation]="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].touched" type="text"
-                                pattern="\d*" formControlName="cardNumber" id="cardNumber" autocomplete="off" placeholder="(例)1234567890" maxlength="16">
+                                pattern="\d*" formControlName="cardNumber" id="cardNumber" autocomplete="off" placeholder="(例)1234567890"
+                                maxlength="16">
                             <div *ngIf="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].touched">
                                 <div *ngIf="inputForm.controls['cardNumber'].errors.required" class="validation-text">カード番号が未入力です</div>
                             </div>
@@ -167,6 +168,12 @@
                     </dl>
                 </li>
             </ul>
+            <div *ngIf="user.isMember()" class="text-center">
+                <input type="checkbox" formControlName="saveCreditCard" id="saveCreditCard">
+                <label for="saveCreditCard">
+                    <strong>クレジットカード情報を保存する</strong>
+                </label>
+            </div>
         </div>
 
         <app-buttons nextLabel="次へ" prevLabel="戻る" prevLink="/purchase/ticket"></app-buttons>
