--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -117,6 +117,7 @@
                                     maxlength="16">
                                 <div *ngIf="inputForm.controls['cardNumber'].invalid && inputForm.controls['cardNumber'].touched">
                                     <div *ngIf="inputForm.controls['cardNumber'].errors.required" class="validation-text">カード番号が未入力です</div>
+                                    <div *ngIf="inputForm.controls['cardNumber'].errors.pattern" class="validation-text">カード番号は数字で入力してください</div>
                                 </div>
                                 <p class="small-x-text">※半角数字、ハイフン「-」なしで入力してください</p>
                             </dd>
