--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -1,7 +1,7 @@
 <div class="contents">
     <h1 class="page-ttl">券種選択</h1>
     <p class="read">ご希望の券種を選択して「次へ」ボタンを押してください。</p>
-    
+
     <div *ngIf="purchase.isUsedMvtk() && purchase.data.mvtkTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle mvtk">
         <dl class="d-table">
             <dt class="d-td">ムビチケ券を利用される方</dt>
@@ -9,6 +9,19 @@
                 <div class="ghost-button mvtk-button">
                     <a routerLink="/purchase/mvtk/input">
                         <img src="/assets/images/common/mvtk_logo.svg" alt="ムビチケ">を利用する
+                    </a>
+                </div>
+            </dd>
+        </dl>
+    </div>
+
+    <div *ngIf="user.isMember()" class="box radius bg-ultra-light-gray mb-middle point">
+        <dl class="d-table">
+            <dt class="d-td">会員ポイントを利用される方</dt>
+            <dd class="d-td width-medium">
+                <div class="ghost-button point-button">
+                    <a routerLink="/purchase/point">
+                        <strong>会員ポイント</strong>を利用する
                     </a>
                 </div>
             </dd>
