--- a/views/layouts/siteSeal.ejs
+++ b/views/layouts/siteSeal.ejs
@@ -9,8 +9,7 @@
             <tr>
                 <td width="135" align="center" valign="top">
                     <span id="siteseal">
-                        <script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=CJxu4PylEza6f3F9FrS7nU1e3ICiQwZylzo1D7FgtI
-YhoZcwBNdehEsWUwok"></script>
+                        <script async type="text/javascript" src="https://seal.godaddy.com/getSeal?sealID=AfMTlT0aRw0pzcxx500Xfc78Q7S3A1M2g3U9Dib3PGAlsVDYQSneN4tbCcrH"></script>
                     </span>
                 </td>
             </tr>
