SSKTS-907 ユーカリが丘座席表製作依頼

--- a/src/client/src/app/components/parts/screen/screen.component.html
+++ b/src/client/src/app/components/parts/screen/screen.component.html
@@ -61,6 +61,7 @@
         </div>
         <div class="device-type-pc"></div>
         <div class="device-type-sp"></div>
+        <div class="screen-style"></div>
     </div>
     <div *ngIf="data" class="{{ data.screenType }}">
         <ng-content></ng-content>
