SSKTS-936 無料鑑賞券での注文フロー追加

--- a/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-mvtk-input/purchase-mvtk-input.component.html
@@ -65,14 +65,14 @@
 </div>
 
 <app-modal [open]="inputValidationModal" [layout]="true" (close)="inputValidationModal = false">
-    <div class="modal-ttl large-text text-center mb-middle">
+    <div class="modal-title large-text text-center mb-middle">
         <strong>入力項目にエラーがあります</strong>
     </div>
     <p class="text-center">入力項目をご確認ください。</p>
 </app-modal>
 
 <app-modal [open]="authErrorModal" [layout]="true" (close)="authErrorModal = false">
-    <div class="modal-ttl large-text text-center mb-middle">
+    <div class="modal-title large-text text-center mb-middle">
         <strong>認証に失敗しました</strong>
     </div>
     <p class="text-center">購入番号と暗証番号、もしくはムビチケ券の対象作品を再度ご確認ください。</p>
