--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -232,7 +232,7 @@
 
 <app-modal class="security-code-modal" [open]="securityCodeModal" [layout]="false" (close)="securityCodeModal = false">
     <div inner class="box radius bg-white">
-        <div class="modal-ttl mb-xx-small text-center">セキュリティーコードについて</div>
+        <div class="modal-title mb-xx-small text-center">セキュリティーコードについて</div>
         <p class="mb-middle small-x-text text-center">※カード会社により表示箇所および名称が異なります。</p>
         <div class="box radius bg-light-gray">
             <dl class="mb-middle">
@@ -258,7 +258,7 @@
 </app-modal>
 
 <app-modal [open]="creditCardAlertModal" [layout]="true" (close)="creditCardAlertModal = false">
-    <div class="modal-ttl large-text text-center mb-middle">
+    <div class="modal-title large-text text-center mb-middle">
         <strong>エラーが発生しました</strong>
     </div>
 </app-modal>
