SSKTS-879 スマホアプリ会員フロー追加

--- a/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
+++ b/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
@@ -36,11 +36,19 @@
     <app-site-seal></app-site-seal>
 </div>
 
-<app-modal [open]="alertModal" [layout]="true" (close)="alertModal = false">
+<app-modal [open]="pointAhortageAlertModal" [layout]="true" (close)="pointAhortageAlertModal = false">
     <div class="modal-title large-text text-center mb-middle">
         <strong>ポイントが不足しています</strong>
     </div>
     <p class="text-center">選択した券種の合計ポイントが所持ポイントを超えています。
+    </p>
+</app-modal>
+
+<app-modal [open]="notSelectAlertModal" [layout]="true" (close)="notSelectAlertModal = false">
+    <div class="modal-title large-text text-center mb-middle">
+        <strong>券種が選択されていません</strong>
+    </div>
+    <p class="text-center">券種を選択してください。
     </p>
 </app-modal>
 
