--- a/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
+++ b/src/client/src/app/components/purchase/purchase-ticket/purchase-ticket.component.html
@@ -15,7 +15,7 @@
         </dl>
     </div>
 
-    <div *ngIf="user.isMember()" class="box radius bg-ultra-light-gray mb-middle point">
+    <div *ngIf="user.isMember() && purchase.data.pointTickets.length === 0" class="box radius bg-ultra-light-gray mb-middle point">
         <dl class="d-table">
             <dt class="d-td">会員ポイントを利用される方</dt>
             <dd class="d-td width-medium">
