--- a/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
+++ b/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
@@ -8,7 +8,7 @@
             <strong class="large-text">{{ user.data.account?.availableBalance }}</strong> ポイント</div>
     </div>
 
-    <ul class="box radius bg-light-gray mb-middle tickets">
+    <ul *ngIf="!isLoading" class="box radius bg-light-gray mb-middle tickets">
         <li *ngFor="let pointTicket of pointTickets">
             <dl>
                 <dt>
@@ -19,11 +19,7 @@
                 </dt>
                 <dd>
                     <select [(ngModel)]="selectTickets[pointTicket.ticketCode]">
-                        <option value="0">0枚</option>
-                        <option value="1">1枚</option>
-                        <option value="2">2枚</option>
-                        <option value="3">3枚</option>
-                        <option value="4">4枚</option>
+                        <option *ngFor="let value of ticketValueList" value="{{ value }}">{{ value }}枚</option>
                     </select>
                 </dd>
             </dl>
