SSKTS-879 デザイン修正

--- a/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
+++ b/src/client/src/app/components/purchase/purchase-input/purchase-input.component.html
@@ -98,7 +98,7 @@
             </h2>
 
             <p class="mb-small">クレジットカード決済の必要事項を入力ください。</p>
-            <div *ngIf="creditCardType === 'input'" class="credit-input">
+            <div *ngIf="creditCardType === 'input'" class="credit-input mb-small">
                 <ul class="box radius bg-light-gray mb-large credit form-layout">
                     <li class="price">
                         <dl>
