SSKTS-879 デザイン修正

--- a/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
+++ b/src/client/src/app/components/purchase/purchase-point/purchase-point.component.html
@@ -1,5 +1,5 @@
 <div class="contents">
-    <h1 class="page-ttl">ムビチケ券認証</h1>
+    <h1 class="page-ttl">ポイント使用</h1>
     <p class="read">
         貯まったポイントの使用方法を選択してください。
     </p>
