--- a/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
+++ b/src/client/src/app/components/purchase/purchase-confirm/purchase-confirm.component.html
@@ -54,6 +54,14 @@
                     </dd>
                 </dl>
             </li>
+            <!-- <li *ngIf="user.isMember()">
+                <dl>
+                    <dt>獲得ポイント</dt>
+                    <dd>
+                        <strong class="red-text">0ポイント</strong>
+                    </dd>
+                </dl>
+            </li> -->
         </ul>
 
         <h2 class="section-ttl">
