SSKTS-953 クレジット仮売上処理タイミング変更

--- a/src/client/src/app/components/parts/icon/icon.component.scss
+++ b/src/client/src/app/components/parts/icon/icon.component.scss
@@ -1,5 +1,6 @@
 .icon {
     display: inline-block;
+    vertical-align: middle;
 }
 .new-tab-white {
     background-image: url(/assets/images/icon/icon_new_tab_white.svg);
